--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           Welcome to GitHub Pages.
         </h3>
 
-        
-
-        <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <>You can download the application <a href = "AlgebraScale.jar">here</a>. You can view the source code <a hfref="github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
       </section>
     </div>
 
