--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Welcome to GitHub Pages.
         </h3>
 
-        <>You can download the application <a href = "AlgebraScale.jar">here</a>. You can view the source code <a hfref="github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
+        <h4>You can download the application <a href = "AlgebraScale.jar">here</a>. You can view the source code <a href="github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
       </section>
     </div>
 
