added embedded applet

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           Welcome to GitHub Pages.
         </h3>
 
+        <applet code="MainApp.class" width="800px" height="600px"/>
+
         <h4>You can download the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
       </section>
     </div>
