trying out applet page

--- a/applet.html
+++ b/applet.html
@@ -31,24 +31,8 @@
           </a>
           Welcome to GitHub Pages.
         </h3>
-
-        <h4>You can download the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
-        <!--
-        <applet code="MainApp.class" width=800 height=600/>
-      -->
+        <applet code="MainApp.class" width="800" height="600"/>
       </section>
-      <center>    
-        <div id = "program">  
-          <textarea id="equation_field" rows="1" cols="50">
-            Type your equation here!
-          </textarea>
-          <button id="update" type="button" onClick="update()">Update</button>
-          <button id="newX" type="button" onClick="newX()"> New X Term</button>
-          <button id="newC" type="button" onClick="newC()">New Constant Term</button>
-          <button id="solve" type="button" onClick="solve()">Balance The Equation</button>
-          <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
-        </div>
-      </center>
     </canvas>
 
     </div>
