--- a/applet.html
+++ b/applet.html
@@ -5,7 +5,6 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Movingmath : GPS project">
-    <script src="CancasMain.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Moving Math</title>
@@ -31,7 +30,7 @@
           </a>
           The applet should be right below this...
         </h3>
-        <applet code="MainApp.class" width="800" height="600"/>
+        <applet code="MainApp.class" width="800" height="600" codebase="."/>
       </section>
     </canvas>
 
