--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Movingmath : GPS project">
-    <script src="CancasMain.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/custom.css">
 
     <title>Moving Math</title>
   </head>
 
-  <body>
+  <body onload="paint()">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/PeterMitrano/MovingMath">View on GitHub</a>
-          <h1 id="project_title">Movingmath</h1>
+          <h1 id="project_title">MovingMath</h1>
           <h2 id="project_tagline">Visualizing Algebra</h2>
         </header>
     </div>
@@ -25,52 +25,39 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-          <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-            <span class="octicon octicon-link"></span>
-          </a>
-          Welcome to GitHub Pages.
-        </h3>
 
-        <h4>You can download the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a> Make sure you have java installed on your computer.</h4>
-        <!--
-        <applet code="MainApp.class" width=800 height=600/>
-      -->
+        <h4>You can download the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a>, but you'll need java installed on your computer.</h4>
+    
       </section>
       <center>    
         <div id = "program">  
-          <textarea id="equation_field" rows="1" cols="50">
-            Type your equation here!
-          </textarea>
-          <button id="update" type="button" onClick="update()">Update</button>
-          <button id="newX" type="button" onClick="newX()"> New X Term</button>
-          <button id="newC" type="button" onClick="newC()">New Constant Term</button>
-          <button id="solve" type="button" onClick="solve()">Balance The Equation</button>
-          <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+          <div id="toolbar">
+            <textarea id="equation_field" rows="1" cols="50" maxlength="25">Type your equation here!</textarea>
+            <div id="buttons">
+              <button id="newX" type="button" onclick="newX(event)"> New X Term</button>
+              <button id="newC" type="button" onclick="newC(event)">New Constant Term</button>
+              <button id="solve" type="button" onclick="solve(event)">Balance The Equation</button><br>
+            </div>
+            <div id="more_buttons">
+              <button id="update" type="button" onclick="update(event)">Update</button>
+              <div id="x_label">X=
+                <span id="x_val">0.0</span>
+              </div>
+            </div>
+          </div>
+          <canvas id="myCanvas" width="800" height="600"></canvas>
         </div>
       </center>
-    </canvas>
-
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Movingmath maintained by <a href="https://github.com/PeterMitrano">Peter Mitrano</a></p>
+        <p class="copyright">MovingMath maintained by <a href="https://github.com/PeterMitrano">Peter Mitrano</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
   </body>
 
-  <script>
-    var canvas = document.getElementById("myCanvas");
-    var context = canvas.getContext("2d");
-
-
-
-    context.fillStyle = "#FF0000";
-    context.fillRect(0,0,150,75);
-  </script>
-
-
+  <script src="javascripts/CanvasMain.js" type="text/javascript"></script>
 </html>
