drag and drop works

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <button id="newC" type="button" onclick="newC(event)">New Constant Term</button>
               <button id="solve" type="button" onclick="solve(event)">Balance The Equation</button><br>
             </div>
+
             <div id="more_buttons">
               <button id="update" type="button" onclick="update(event)">Update</button>
               <div id="x_label">X=
@@ -45,7 +46,12 @@
               </div>
             </div>
           </div>
-          <canvas id="myCanvas" width="800" height="600"></canvas>
+
+          <div id="canvas_container">
+
+            <canvas id="my_canvas" width="800" height="600"/>
+            
+          </div>
         </div>
       </center>
     </div>
