fubalanced according to weights

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Moving Math</title>
   </head>
 
-  <body onload="paint()">
+  <body onload="init()">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
