--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Movingmath : GPS project">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/custom.css">
+    <script src="javascripts/CanvasMain.js" type="text/javascript"></script>
+    <script src="javascripts/jquery-1.11.1.js"></script>
 
     <title>Moving Math</title>
   </head>
@@ -48,7 +50,6 @@
           </div>
 
           <div id="canvas_container">
-            <canvas id="my_canvas" width="800" height="600"></canvas>
             <div id="new_term_rack"></div>
             <div id="sides"></div>
             <img src="./images/trash.png" width="80" id="trash"/>
@@ -65,6 +66,4 @@
       </footer>
     </div>
   </body>
-
-  <script src="javascripts/CanvasMain.js" type="text/javascript"></script>
 </html>
