--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/custom.css">
     <script src="javascripts/CanvasMain.js" type="text/javascript"></script>
     <script src="javascripts/jquery-1.11.1.js"></script>
-
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
     <title>Moving Math</title>
   </head>
 
