--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="javascripts/jquery-1.11.1.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+    <script src="javascripts/jquery.touch-punch.min.js"></script>
     <title>Moving Math</title>
   </head>
 
