attemping to include ipad support

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="description" content="Movingmath : GPS project">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/custom.css">
+
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 
+    <script src="javascripts/jquery.ui.touch-punch.min.js"></script>
    
     <title>Moving Math</title>
   </head>
