fixing ipad look incompatabilities

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div id="more_buttons">
-              <button id="update" type="button" onclick="update(event)">Update</button>
+              <!--<button id="update" type="button" onclick="update(event)">Update</button>-->
               <div id="x_label">X=
                   <span>
                     <input id="x_val" value="0.0" maxlength="5" />
