fixing ipad look incompatabilities

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
             <div id="more_buttons">
               <!--<button id="update" type="button" onclick="update(event)">Update</button>-->
-              <div id="x_label">X=
-                  <span>
+              <span id="x_label">
+                X=
+              <span>
+              <span>
                     <input id="x_val" value="0.0" maxlength="5" />
                   </span>
-              </div>
             </div>
           </div>
 
