--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <div id="toolbar">
             <textarea id="equation_field" rows="1" cols="50" maxlength="25">Type your equation here!</textarea>
             <div id="buttons">
-              <button id="newC" type="button" onclick="newC(event)">New Constant Term</button>
-              <button id="newX" type="button" onclick="newX(event)"> New X Term</button>
-              <button id="solve" type="button" onclick="solve(event)">Balance The Equation</button><br>
+              <button id="button" type="button" onclick="newC(event)">New Constant Term</button>
+              <button id="button" type="button" onclick="newX(event)"> New X Term</button>
+              <button id="button" type="button" onclick="solve(event)">Balance The Equation</button><br>
             </div>
 
             <div id="more_buttons">
