--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 
-    <script src="javascripts/jquery.ui.touch-punch.min.js"></script>
+    <script src="javascripts/jquery.ui.touch-punch.js"></script>
    
     <title>Moving Math</title>
   </head>
