--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <img src="./images/trash.png" width="120" id="trash"/>
           </div>
         </div>
+
+        <p>
+          <b>Instructions:</b>
+          The above scale can be used to visualize equations, and demonstrate how different algebraic manipulations preserve equality. You can place difference "Constant" or "X" terms on the sides of the scale by dragging them by the gray handles. You can edit the coefficients of the terms. Negative coefficients will display as red, and positive coefficients as blue. Drag terms to the trash or the rack to remove them from calculation. You can type an equation at the top right text area, and verify that it equals what's on the scale by looking at the top right text area. When using an equation, click "Balance the equation" to set the correct value of X. This helps demonstrate that the equation is true at the value of X.
+          Have fun!
+        </p>
       </center>
     </div>
 
