include hide feature

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
             <div id="more_buttons">
               <span id="x_label">X=<span>
-              <input id="x_val" value="0.0" maxlength="7" />
-              <input type="checkbox" value="show"></input>
+              <input id="x_val" class="invisible" value="0.0" maxlength="7" />
+              <input type="checkbox" value="show" onclick="hideX(this)"></input>
               <span id="show_x">show X solution</span>
             </div>
           </div>
