put download link ath the bottom

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-
-        <h4>You can download the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a>, but you'll need java installed on your computer.</h4>
     
       </section>
       <center>    
@@ -70,6 +68,10 @@
             Have fun!
           </p>
         </div>
+
+
+        <h4>You can download a really bad version of the application <a href="AlgebraScale.jar">here</a>. You can view the source code <a href="https://www.github.com/petermitrano/MovingMath/">here</a>, but you'll need java installed on your computer.</h4>
+
       </center>
     </div>
 
