added fraction support

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div id="more_buttons">
               <span id="x_label">X=<span>
-              <input id="x_val" value="0.0" maxlength="7" />
+              <input id="x_val" type=text value="1.0" maxlength="7" />
               <input type="checkbox" value="show" onclick="hideX(this)" checked></input>
               <span id="show_x">show X solution</span>
             </div>
