added view counter

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       </center>
     </div>
 
+    <a href="http://www.hitwebcounter.com/" target="_blank">
+      <img src="http://hitwebcounter.com/counter/counter.php?page=5894336&style=0032&nbdigits=5&type=page&initCount=0" border="0" >
+    </a>
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
