added tutorial video

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <br>
             The above scale can be used to visualize equations. Drag and drop "Constant" or "X" terms on the sides of the scale by dragging them by the gray handles! You can edit the coefficients of the terms. Drag terms to the trash or the rack to remove them from calculation. You can type an equation at the top right textbox, and verify that it equals what's on the scale by looking at the top right textbox. When using an equation, click "Balance the equation" to set the correct value of X. This helps demonstrate that the equation is true at the value of X.
             Have fun!
+            <br>
+            You can watch a video tutorial <a href="https://github.com/PeterMitrano/MovingMath/using_the_algebra_scale.mkv"> here </a>
           </p>
         </div>
         <br>
